--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,17 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+ <h1>Create Basketball Team</h1>
+ <form method="POST" action="/team">
+      <p>Team name:<input type="text" name="name"></p>
+      <p>Coach:<input type="text" name="coach"></p>
+      <p>PointGaurd:<input type="text" name="pg"></p>
+      <p>ShootingGaurd:<input type="text" name="sg"></p>
+      <p>PowerForward:<input type="text" name="pf"></p>
+      <p>SmallForward:<input type="text" name="sf"></p>
+      <p>Center:<input type="text" name="c"></p>
+       <input type="submit" value="Submit" id="submit">
+    </form>
  </body>
 </html>
 
